deployment/kubeflow/manifests/apps/pipeline/upstream/base/pipeline/ml-pipeline-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ml-pipeline-ui
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: ml-pipeline-ui
