deployment/kubeflow/manifests/apps/pipeline/upstream/base/pipeline/ml-pipeline-ui-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: ml-pipeline-ui
  name: ml-pipeline-ui-virtualservice
  namespace: kubeflow
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  - istio-system/istio-ingressgateway

  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /mlpipeline/
    rewrite:
      uri: /
    route:
    - destination:
        host: ml-pipeline-ui.kubeflow.svc.cluster.local
        port:
          number: 3000
      headers:
        response:
          set:
            X-Frame-Options: "SAMEORIGIN"
            Access-Control-Allow-Origin: DOMAIN
            Access-Control-Allow-Credentials: "true"
    corsPolicy:
      allowOrigins:
        - exact: DOMAIN
      allowMethods:
        - GET
        - POST
        - OPTIONS
      allowHeaders:
        - authorization
        - content-type
      allowCredentials: true
